[package]
name = "loxr"
version = "0.1.0"
authors = ["George Seabridge"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.0"
rustyline = "~8.2"
serde = { version = "1.0", features = ["derive"] }
term-painter = "*"
